--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,16 @@
   "description": "Aplicacion de la inteligencia artificial en el analisis de emociones para detectar indicios de depresion",
   "main": "server.js",
   "scripts": {
-    "test": "",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm install && node",
+    "start-dev": "npm install && nodemon --legacy-watch"
   },
   "author": "Jordi Sánchez",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
