--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - "3000:3000"
     volumes:
       - ./server:/app
+      - ./client:/app/client
     depends_on:
       - mongodb
     command: [ "npm", "run", "start-dev" ]
