--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,9 @@
 PORT=3000
 
-AUTH_SECRET_KEY="Jordi"
+AUTH_SECRET_KEY=""
 AUTH_SECRET_KEY_EXPIRATION=86400
 
-CODE_REGISTRATION="JordiTA*"
+CODE_REGISTRATION=""
 
 MONGO_HOST=mongodb
 MONGO_PORT=27017
