--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "chartjs-plugin-zoom": "^2.0.1",
