Envio a API hume.ai funcional
Ademas ya hace el get y el procesamiento de json de emociones

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     build: 
       context: ./server
       args:
-        NODE_ENV: development
+        #NODE_ENV: development
+        NODE_ENV: production
     ports:
       - "3000:3000"
     volumes:
@@ -18,4 +19,5 @@ services:
       - ./client:/app/client
     depends_on:
       - mongodb
+    #command: [ "npm", "run", "start" ]
     command: [ "npm", "run", "start-dev" ]
